# ai-builder-eval-observability-framework

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  observability-enhancement.md  openapi.json  pyproject.toml  self-heal-enhancement.md
.github/workflows/: version-bump.yml
executive_pagers/: README.md  verity-executive-narrative.html  verity-executive.html  verity-executive.pptx  verity-technical-overview.html
frontend-web/: _api.js  _app.css  _chrome.js  dashboard.js  index.html  settings.html  styles.css
frontend-web/evaluation/: app.js  catalog.html  create.html  custom-judge.html  executive-report.html  index.html  job.html  palette.html  styles.css  verdict-set.html
frontend-web/observability/: _tabs.js  app.js  batch.html  batches.js  calibration.html  datasets.html  gate.html  index.html  monitors.html  pack.html  packs.html  styles.css  trace.html  trajectory.html
frontend-web/persona-lab/: app.js  create.html  edit.html  index.html  palette.html  styles.css
frontend-web/question-generation/: app.js  create.html  index.html  job.html  palette.html  seed-set.html  styles.css
frontend-web/self-heal/: app.js  index.html  styles.css
frontend-web/simulation/: app.js  create.html  index.html  onboard.html  palette.html  run.html  styles.css  trace.html
scripts/: demo.py  init_infra.py  onboard_agent.py  run_all.py  seed_demo.py  seed_pipeline.py  self_heal_demo.py
services/agent-under-test/: pyproject.toml
services/agent-under-test/src/agent_under_test/: __init__.py  __main__.py  app.py  tracing.py
services/api-orchestration/: pyproject.toml
services/api-orchestration/src/api_orchestration/: __main__.py  app.py  clients.py  submit.py
services/evaluation-svc/: pyproject.toml
services/evaluation-svc/src/evaluation_svc/: __main__.py  app.py  judges.py  worker.py
services/observability-svc/: pyproject.toml
services/observability-svc/src/observability_svc/: __main__.py  app.py  store.py  worker.py
services/persona-svc/: pyproject.toml
services/persona-svc/src/persona_svc/: __main__.py  app.py
services/qgen-svc/: pyproject.toml
services/qgen-svc/src/qgen_svc/: __main__.py  app.py  gen.py  worker.py
services/self-heal-svc/: pyproject.toml
services/self-heal-svc/src/self_heal_svc/: __main__.py  app.py  seed.py  store.py  worker.py
services/simulation-svc/: pyproject.toml
services/simulation-svc/src/simulation_svc/: __main__.py  adapters.py  app.py  sim.py  worker.py
tests/: test_core.py  test_pipeline.py  test_self_heal.py
