# uv workspace root for the Enterprise Eval Observability Framework.
# Members are the shared `core` package and the eight runtime services.
[project]
name = "eeof-monorepo"
version = "0.1.0"
description = "Enterprise Eval Observability Framework — microservice implementation"
requires-python = ">=3.13"
# The root is a meta-package; real deps live in each member's pyproject.
dependencies = [
    "eeof-core",
    "eeof-api-orchestration",
    "eeof-persona-svc",
    "eeof-qgen-svc",
    "eeof-simulation-svc",
    "eeof-evaluation-svc",
    "eeof-observability-svc",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
eeof-core = { workspace = true }
eeof-api-orchestration = { workspace = true }
eeof-persona-svc = { workspace = true }
eeof-qgen-svc = { workspace = true }
eeof-simulation-svc = { workspace = true }
eeof-evaluation-svc = { workspace = true }
eeof-observability-svc = { workspace = true }

[dependency-groups]
# Optional real-infra / real-LLM extras. `uv sync` installs these; local mode
# never imports them, so a bare checkout still boots on the in-memory plane.
infra = [
    "nats-py>=2.9",
    "boto3>=1.35",
]
llm = [
    "anthropic>=0.40",
]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
