[project]
name = "eeof-evaluation-svc"
version = "0.1.0"
description = "Evaluation — async worker (eval.jobs) + sync judge-registry (judges/juries)."
requires-python = ">=3.13"
dependencies = ["eeof-core", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.uv.sources]
eeof-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation_svc"]
