[project]
name = "eeof-persona-svc"
version = "0.1.0"
description = "Persona Lab — sync capability service (persona CRUD + versioning)."
requires-python = ">=3.13"
dependencies = ["eeof-core", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.uv.sources]
eeof-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_svc"]
