[project]
name = "eeof-self-heal-svc"
version = "0.1.0"
description = "Self-Heal — closed-loop remediation read API + remediation-ship worker."
requires-python = ">=3.13"
dependencies = ["eeof-core", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.uv.sources]
eeof-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_heal_svc"]
