[project]
name = "eeof-simulation-svc"
version = "0.1.0"
description = "Simulation — async worker (sim.jobs) + sync adapter registration."
requires-python = ">=3.13"
dependencies = ["eeof-core", "fastapi>=0.115", "uvicorn[standard]>=0.30", "httpx>=0.27"]

[tool.uv.sources]
eeof-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_svc"]
